<resources>
    <string name="app_name">Thorium_Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="map_fragment_label">Map Fragment</string>
    <string name="next">Next</string>
    <string name="home">Home</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string id="shit" name="type">Type:</string>
    <string name="time">Time:</string>
    <string name="altitude">Altitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="mnc">Mnc:</string>
    <string name="mcc">Mcc:</string>
    <string name="lac">Lac/Tac:</string>
</resources>
